newrelic_livedata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nr-exp-app1-ing
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: issuegen-exp-newrelic1.aoa.oes.opsmx.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nr-exp-app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nr-exp-app2-ing
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: issuegen-exp-newrelic2.aoa.oes.opsmx.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nr-exp-app2-svc
            port:
              number: 80
